# file-batch-tool

./: LICENSE  README.md  pyproject.toml
filebatch/: clean.py  cli.py
tests/: archive.py  rename.py
